[package]
authors = [
    "Marc Brinkmann <git@marcbrinkmann.de>",
    "Denys Vitali <denys@denv.it>",
]
name = "poppler"
license = "GPL-2.0"
version = "0.6.0"
description = "Wrapper for the GPL-licensed Poppler PDF rendering library."
repository = "https://github.com/DMSrs/poppler-rs"
edition = "2018"

[features]
render = ["dep:cairo-rs"]

[dependencies]
cairo-rs = { version = "0.20.5", features = ["png", "pdf"], optional = true }
glib = "0.20.6"
gobject-sys = "0.20"
